be/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leda-diecutting-api
  labels:
    app: leda-diecutting-api
spec:
  type: ClusterIP
  selector:
    app: leda-diecutting-api
  ports:
    - name: http
      port: 8080
      targetPort: http
